# ai-tools

./: .gitignore  LICENSE  README.md
cli-tools/granola-sync/: .gitignore  README.md  sync.py
cli-tools/jira-sync/: .env.example  .gitignore  README.md  auth.py  sync.py
guides/: agentic-tools-for-non-engineers.md  example-agents-md.md  getting-started.md
mcps/atlassian-internal-mcp/: README.md  pyproject.toml
mcps/atlassian-internal-mcp/src/: auth.py  server.py
mcps/atlassian-unofficial-mcp/: README.md  pyproject.toml
mcps/atlassian-unofficial-mcp/src/: auth.py  server.py
mcps/dropbox-sign-mcp/: README.md  pyproject.toml
mcps/dropbox-sign-mcp/src/: auth.py  server.py
rules/: git-best-practices.mdc  granola-raw-transcript.mdc
skills/customer-journey/: README.md  SKILL.md  journey.mjs  package-lock.json  package.json  publish.sh
skills/customer-journey/templates/: extend.template.yaml  journey-extend.template.mjs
skills/slack-feedback-to-pr/: README.md  SKILL.md  channels.example.yaml  reactions.example.yaml
